fix: address PR review feedback from RegistrationGuard SPI (#271)
- Include denial reason in OAuth2Error description field so
  AuthenticationFailureHandlers can access it via getError().getDescription()
  in both DSOAuth2UserService and DSOidcUserService
- Replace String.trim().isEmpty() with String.isBlank() in
  RegistrationDecision.deny() (Java 17+ idiomatic)
- Extract DEFAULT_DENIAL_REASON constant in RegistrationDecision
- Add @FunctionalInterface to RegistrationGuard interface
- Add JavaDoc clarifying RegistrationDecision reason is only meaningful
  when allowed is false
- Add RegistrationContextTest covering null source validation